[project]
name = "agentforge-tools"
version = "0.1.0"
description = "Python SDK for agent-tools — The OS for your agent's tools"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 100
